--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Alo criançada o bozo chegou</title>
+		<title>A title</title>
 	</head>
 	<body>
 		<h1>Hello world, its Marcelo</h1>
